--- a/ExtractGitHub/pom.xml
+++ b/ExtractGitHub/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>jpa-fix</artifactId>
             <version>1.1</version>
         </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
