--- a/ExtractGitHub/pom.xml
+++ b/ExtractGitHub/pom.xml
@@ -35,6 +35,13 @@
             <version>7.0</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.vdurmont/emoji-java -->
+        <dependency>
+            <groupId>com.vdurmont</groupId>
+            <artifactId>emoji-java</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
