Extruturação rede e projedo web atualizado. Extração dos dados também corrigida.

--- a/ExtractGitHub_web/pom.xml
+++ b/ExtractGitHub_web/pom.xml
@@ -33,7 +33,13 @@
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>5.0</version>
+            <version>6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.bootsfaces</groupId>
+            <artifactId>bootsfaces</artifactId>
+            <version>1.0.1</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
